Fix uneven amount of blank space in front page boxes

--- a/www/style.css
+++ b/www/style.css
@@ -25,6 +25,10 @@ sup {
   line-height: 0;
 }
 
+table {
+  margin-bottom: 20px;
+}
+
 th {
   text-align: left;
 }
